--- a/src/components/shopSection_Collection.scss
+++ b/src/components/shopSection_Collection.scss
@@ -148,7 +148,7 @@
         justify-content: center;
         align-items: center;
         flex: 1;
-        height: 15em;
+        min-height: 15em;
 
         //mobile first
         flex-direction: column;
